Revive Android (#42)
* Revive Android

* Fix part 1

* Fix for using com.apple.eawt under mac

* Travis to use JDK20 for Desktop

* Try to avoid 'assemble' in Travis

* Fixed createExe (launch4j)

* Android app works on simulator

* Fix for using com.apple.eawt under mac for JAR

* Android licenses

* Android licenses

* Android licenses

* Android licenses

* Android licenses

* Android travis script

* Android travis script

* Android travis script

* Android travis script

* Android travis script

* Android travis script

* Android travis script

* Resolve Android Linter issues

* Travis

* Travis

* Travis

* Fix USB issues

---------

Co-authored-by: Piotr Skowronek <piotr.skowronek@gmail.com>